update authservice